--- a/inizio/templates/result.html
+++ b/inizio/templates/result.html
@@ -5,18 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
     <table class="table">
         <tr>
-            {% for col in colonne%}
-            <th>{{col}}</th>
-            {%endfor%}
+            {% for col in colonne %}
+                <th>{{col}}</th>
+            {% endfor %}
         </tr>
-        {% for row in dati %}
-        <tr>
-            
-        </tr>
+        {% for record in dati %}
+            <tr>
+                {% for index in range(colonne|length) %}
+                    <td>
+                        {{record[index]}}
+                    </td>
+                {% endfor %}
+            </tr>
+        {% endfor %}
     </table>
 </body>
 </html>
